fixed width overflow

--- a/app/assets/stylesheets/user.css
+++ b/app/assets/stylesheets/user.css
@@ -57,7 +57,7 @@
 
 .page-main-content{
     float: left;
-    width: 920px;
+    width: 55%;    
     padding: 20px;
     border: 1px solid transparent;
     border-radius: 5px;
